--- a/intro.html
+++ b/intro.html
@@ -9,6 +9,6 @@
     <h1>hellow</h1>
     <p>para</p>
     <b>block</b>
-    <a href="./intro.html">Intro</a>
+    <a href="./intro.html">Start</a>
   </body>
 </html>
